--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div class="listin">
             <ul>
-                <li>   <a href="#div_1"> Quien soy?</a></li>
+                <li>   <a href="#div_1"> asdasdasd</a></li>
                 <li> <a href="#div_2"> Que se hacer?</a></li>
                 <li> <a href="#div_3"> Que no se hacer</a></li>
                 <li> <a href="#div_4"> Portfolio </a> </li>
